// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`marks app as rated 1`] = `
Object {
  "rated": true,
  "visitsCount": 0,
}
`;

exports[`returns the initial state 1`] = `
Object {
  "rated": false,
  "visitsCount": 0,
}
`;
